Fixed bugs in generator layer

1) Regenerate generator cache on loading
2) Regenerate generator cache on every change of the fill layer selection.
   It is done in a deferred fashion using KisSignalCompressor.

BUG:343807